--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.4",
+    "shelljs": "^0.8.3",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
