--- a/package.json
+++ b/package.json
@@ -14,7 +14,10 @@
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.4",
+    "csv-writer": "^1.6.0",
+    "shell-exec": "^1.0.2",
     "shelljs": "^0.8.3",
+    "username": "^5.1.0",
     "vue": "^2.6.11",
     "vuetify": "^2.2.11"
   },
