--- a/package.json
+++ b/package.json
@@ -1,7 +1,11 @@
 {
   "name": "auto-pairing-app",
-  "version": "0.1.0",
+  "description": "auto-pairing application",
+  "version": "1.0.0",
   "private": true,
+  "author": {
+    "name": "Thomas MENDES"
+  },
   "scripts": {
     "serve": "vue-cli-service serve",
     "build": "vue-cli-service build",
@@ -11,27 +15,29 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "background.js",
+  "main": "src/background.js",
   "dependencies": {
+    "babel-node": "0.0.1-security",
+    "babel-register": "^6.26.0",
     "core-js": "^3.6.4",
     "csv-writer": "^1.6.0",
     "shell-exec": "^1.0.2",
     "shelljs": "^0.8.3",
     "username": "^5.1.0",
     "vue": "^2.6.11",
-    "vuetify": "^2.2.11"
+    "vuetify": "^2.2.15"
   },
   "devDependencies": {
-    "@vue/cli-plugin-babel": "~4.2.0",
-    "@vue/cli-plugin-eslint": "~4.2.0",
-    "@vue/cli-service": "~4.2.0",
-    "babel-eslint": "^10.0.3",
-    "electron": "^6.0.0",
+    "@vue/cli-plugin-babel": "^4.2.3",
+    "@vue/cli-plugin-eslint": "^4.2.3",
+    "@vue/cli-service": "^4.2.3",
+    "babel-eslint": "^10.1.0",
+    "electron": "^6.1.9",
     "eslint": "^6.7.2",
-    "eslint-plugin-vue": "^6.1.2",
-    "sass": "^1.19.0",
+    "eslint-plugin-vue": "^6.2.2",
+    "sass": "^1.26.2",
     "sass-loader": "^8.0.0",
-    "vue-cli-plugin-electron-builder": "~1.4.5",
+    "vue-cli-plugin-electron-builder": "^1.4.6",
     "vue-cli-plugin-vuetify": "~2.0.5",
     "vue-template-compiler": "^2.6.11",
     "vuetify-loader": "^1.3.0"
