--- a/package.json
+++ b/package.json
@@ -15,14 +15,10 @@
     "postinstall": "electron-builder install-app-deps",
     "postuninstall": "electron-builder install-app-deps"
   },
-  "main": "src/background.js",
+  "main": "background.js",
   "dependencies": {
-    "babel-node": "0.0.1-security",
-    "babel-register": "^6.26.0",
     "core-js": "^3.6.4",
     "csv-writer": "^1.6.0",
-    "shell-exec": "^1.0.2",
-    "shelljs": "^0.8.3",
     "username": "^5.1.0",
     "vue": "^2.6.11",
     "vuetify": "^2.2.15"
