--- a/package.json
+++ b/package.json
@@ -19,15 +19,17 @@
     "nopy": "nopy",
     "npip": "npip"
   },
-  "electronWebpack": { "renderer": { "webpackConfig": "webpack.renderer.additions.js" } },
+  "electronWebpack": {
+    "renderer": {
+      "webpackConfig": "webpack.renderer.additions.js"
+    }
+  },
   "main": "background.js",
   "dependencies": {
     "core-js": "^3.6.4",
     "csv-writer": "^1.6.0",
     "file-loader": "^6.0.0",
     "nopy": "^0.2.7",
-    "python": "0.0.4",
-    "python-shell": "^1.0.8",
     "raw-loader": "^4.0.0",
     "username": "^5.1.0",
     "vue": "^2.6.11",
@@ -38,6 +40,8 @@
     "@vue/cli-plugin-eslint": "^4.2.3",
     "@vue/cli-service": "^4.2.3",
     "babel-eslint": "^10.1.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-register": "^6.26.0",
     "electron": "^6.1.9",
     "eslint": "^6.7.2",
     "eslint-plugin-vue": "^6.2.2",
